# pyddns

./: PKG-INFO  README.md  config-generator.py  ddns.service  pyddns-sysuser.conf  pyddns.env  pyddns.spec  requirements.txt  setup.cfg
doc/: dnspod-ls.py  ip.md
pyddns/: __init__.py  config.py  ddns.py  loader.py  utils.py
pyddns/plugins/: __init__.py  ddns.py  dnspod.py  scanner.py
pyddns/utils/: __init__.py
