[metadata]
name = pyddns
version = 1.0.0
summary = ddns utils
description-file =
    README.md
license = MIT
author = Lolizeppelin
author-email = lolizeppelin@gmail.com
home-page = https://github.com/lolizeppelin/pyddns
classifier =
    Environment :: Lolizeppelin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: MIT
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_reno]
output-file = RELEASENOTES.txt

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0


[files]
packages =
    pyddns

[entry_points]
oslo.config.opts =
    pyddns = pyddns.config:list_opts
    pyddns.dnspod = pyddns.config:list_dnspod_opts
